# mailsis

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.minimal  README.md  config.example.toml  config.toml
.github/workflows/: deploy.yml  dockerx-build.yml  dockerx.yml  main.yml
certs/: ca.cert.pem  ca.cert.srl  ca.key.pem  server.cert.pem  server.csr.pem  server.ext  server.key.pem
crates/utils/: Cargo.toml
crates/utils/src/: auth.rs  config.rs  exec.rs  file.rs  handler.rs  imap.rs  lib.rs  message.rs  metadata.rs  mime.rs  router.rs  storage.rs  tls.rs  transformer.rs
crates/utils/src/handlers/: file_storage.rs  mod.rs  redis.rs  reject.rs
crates/utils/src/transformers/: email_auth.rs  message_id.rs  mod.rs
imap/: Cargo.toml
imap/examples/: imap_client.py  smtp_client.py
imap/src/: main.rs
passwords/: example.txt
smtp/: Cargo.toml  cert.pem  key.pem
smtp/examples/: smtp_advanced.py  smtp_client.py  smtp_client.rs  smtp_raw.rs
smtp/src/: main.rs
src/: main.rs
