[package]
name = "mailsis-imap"
description = "Simple (yet efficient) IMAP server."
version = "0.2.0"
authors = ["João Magalhães <joamag@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/joamag/mailsis"
keywords = ["email", "imap", "server"]
readme = "../README.md"
edition = "2021"
rust-version = "1.83"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
mailsis-utils = { path = "../crates/utils", version = "0.2.0" }
