[package]
name = "mailsis-smtp"
description = "Simple (yet efficient) SMTP server."
version = "0.2.0"
authors = ["João Magalhães <joamag@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/joamag/mailsis"
keywords = ["email", "smtp", "imap", "server"]
readme = "../README.md"
edition = "2021"
rust-version = "1.83"

[features]
default = []
redis = ["mailsis-utils/redis"]
email-auth = ["mailsis-utils/email-auth"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
mailsis-utils = { path = "../crates/utils", version = "0.2.0" }

[dev-dependencies]
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
native-tls = "0.2"
