[package]
name = "mailsis-utils"
description = "Utilities for Mailsis."
version = "0.1.0"
authors = ["João Magalhães <joamag@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/joamag/mailsis"
keywords = ["email", "smtp", "imap", "server"]
edition = "2021"
rust-version = "1.81"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "1"
rand = "0.8"
