[package]
name = "mailsis-utils"
description = "Utilities for Mailsis."
version = "0.1.0"
authors = ["João Magalhães <joamag@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/joamag/mailsis"
keywords = ["email", "smtp", "imap", "server"]
edition = "2021"
rust-version = "1.83"

[features]
default = []
redis = ["dep:redis"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "1"
rand = "0.8"
rusqlite = { version = "0.36", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
redis = { version = "1", features = ["tokio-comp"], optional = true }

[dev-dependencies]
tempfile = "3.8"
